unpackaged/main/default/objects/CMPL123__Audit_Trail_Entry__c/CMPL123__Audit_Trail_Entry__c.object-meta.xml
<CustomObject>
    <description>Capture audit trail history of all select objects/fields.</description>
    <label>Audit Trail Entry</label>
    <nameField>
        <displayFormat>ATE-{00000}</displayFormat>
        <label>Audit Trail Entry Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Audit Trail Entries</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>