unpackaged/main/default/objects/CMPL123__Audit_Trail_Entry__c/fields/CMPL123__Action__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Action__c</fullName>
        <description>Action Type</description>
        <inlineHelpText>Action Type</inlineHelpText>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inserted</fullName>
                </value>
                <value>
                    <fullName>Updated</fullName>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>