unpackaged/main/default/objects/CMPL123__Audit_Trail_Entry__c/fields/CMPL123__Audit_Trail_JSON__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Audit_Trail_JSON__c</fullName>
        <description>Audit Trail JSON</description>
        <inlineHelpText>Audit Trail JSON</inlineHelpText>
        <label>Audit Trail JSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </CustomField>