unpackaged/main/default/objects/CMPL123__Audit_Trail_Entry__c/fields/CMPL123__Created_By_Username__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Created_By_Username__c</fullName>
        <description>Created By Username</description>
        <inlineHelpText>Created By Username</inlineHelpText>
        <label>Created By Username</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>