unpackaged/main/default/objects/CMPL123__Audit_Trail_Entry__c/fields/CMPL123__Field_Api_Name__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Field_Api_Name__c</fullName>
        <description>Field Api Name</description>
        <inlineHelpText>Field Api Name</inlineHelpText>
        <label>Field Api Name</label>
        <type>TextArea</type>
    </CustomField>