unpackaged/main/default/objects/CMPL123__Audit_Trail_Entry__c/fields/CMPL123__Last_Modified_Date_Time__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Last_Modified_Date_Time__c</fullName>
        <formula>LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified Date Time</label>
        <type>DateTime</type>
    </CustomField>