unpackaged/main/default/objects/CMPL123__Audit_Trail_Entry__c/fields/CMPL123__New_Value__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__New_Value__c</fullName>
        <description>New Value</description>
        <inlineHelpText>New Value</inlineHelpText>
        <label>New Value</label>
        <type>TextArea</type>
    </CustomField>