unpackaged/main/default/objects/CMPL123__Audit_Trail_Entry__c/fields/CMPL123__NewValue__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__NewValue__c</fullName>
        <description>Audit New Value</description>
        <label>New Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>