unpackaged/main/default/objects/CMPL123__Audit_Trail_Entry__c/fields/CMPL123__Object_Api_Name__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Object_Api_Name__c</fullName>
        <description>Object Api Name</description>
        <inlineHelpText>Object Api Name</inlineHelpText>
        <label>Object Api Name</label>
        <type>TextArea</type>
    </CustomField>