unpackaged/main/default/objects/CMPL123__Audit_Trail_Entry__c/fields/CMPL123__Object_Name__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Object_Name__c</fullName>
        <description>Object Name</description>
        <inlineHelpText>Object Name</inlineHelpText>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>