unpackaged/main/default/objects/CMPL123__Audit_Trail_Entry__c/fields/CMPL123__Old_Value__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Old_Value__c</fullName>
        <description>Old Value</description>
        <inlineHelpText>Old Value</inlineHelpText>
        <label>Old Value</label>
        <type>TextArea</type>
    </CustomField>