unpackaged/main/default/objects/CMPL123__Audit_Trail_Entry__c/fields/CMPL123__OldValue__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__OldValue__c</fullName>
        <description>Audit Old value</description>
        <inlineHelpText>Audit Old value</inlineHelpText>
        <label>Old Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>