unpackaged/main/default/objects/CMPL123__Audit_Trail_Entry__c/fields/CMPL123__ParentId__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__ParentId__c</fullName>
        <description>Parent/Related Salesforce Record Id</description>
        <inlineHelpText>Parent/Related Salesforce Record Id</inlineHelpText>
        <label>Parent Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </CustomField>